[package]
name = "tuzi-proxy"
version = "0.1.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
http = "0.2.1"
libc = "0.2.77"
nom = "5.1.2"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["full"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.12"
