[package]
name = "tuzi-proxy"
version = "0.1.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.40"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
derive_more = "0.99.11"
futures = "0.3.5"
http = "0.2.1"
indexmap = "1.6.0"
libc = "0.2.79"
nom = "5.1.2"
once_cell = "1.4.1"
serde = "1.0.117"
serde_json = "1.0.59"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["full"] }
tower-service = "0.3.0"
tower-util = "0.3.1"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.12"

[dev-dependencies]
hyper = { git = "https://github.com/jmjoy/hyper.git", branch = "v0.13.8-hack" }
redis = { git = "https://github.com/jmjoy/redis-rs.git", branch = "0.17.0-hack", features = ["tokio-comp"] }
testcontainers = "0.11.0"
